# G.L.A.D

./: .gitignore  .pre-commit-config.yaml
install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: local_setup.sh  package.sh
install/glad_motor_controller/lib/glad_motor_controller/: motor_driver
install/glad_motor_controller/share/glad_motor_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/glad_voice/lib/glad_voice/: voice_assistant  voice_assistant = glad_voice.voice_assistant:mainnew_voice_assistant
install/glad_voice/share/glad_voice/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/myimu/lib/myimu/: imuodom  imupub
install/myimu/share/myimu/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: README.md
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: ekf_config.yaml  glad_final_tour.py  jithin_room.yaml  laser_filter.yaml  my_nav2_params.yaml  robotics_lab_main.yaml
src/bringup/launch/: glad_nav2.launch.py  sensorbringup.launch.py
src/glad_imu/: README.md  package.xml  setup.cfg  setup.py
src/glad_imu/glad_imu/: imuodom.py  imupublisher.py
src/glad_imu/glad_imu_filter/: package.xml  setup.cfg  setup.py
src/glad_imu/glad_imu_filter/config/: madgwick_params.yaml
src/glad_imu/glad_imu_filter/glad_imu_filter/: imu_madgwick_node.py
src/glad_imu/glad_imu_filter/launch/: imu_madgwick_launch.py
src/glad_imu/glad_imu_publisher/: package.xml  setup.cfg  setup.py
src/glad_imu/launch/: fullimu.launch.py
src/glad_lidar/: README.md
src/glad_lidar/glad_laser_filter/: package.xml  setup.cfg  setup.py
src/glad_lidar/glad_rplidar/: package.xml  setup.cfg  setup.py
src/glad_lidar/rf2o_laser_odometry/: package.xml  setup.cfg  setup.py
src/glad_mapping/: README.md  package.xml  setup.cfg  setup.py
src/glad_mapping/config/: slam_toolbox.yaml
src/glad_mapping/glad_mapping/: slam_toolbox_node.py
src/glad_mapping/launch/: slam_toolbox_launch.py
src/glad_maps/jithin_home/: jithin_room.pgm  jithin_room.yaml
src/glad_maps/robotics_floor/: robotics_floor.pgm  robotics_floor.yaml
src/glad_motion_control/: README.md
src/glad_motion_control/glad_motor_controller/: setup.cfg  setup.py
src/glad_motion_control/glad_teleop/: package.xml  setup.cfg  setup.py
src/glad_motion_control/glad_teleop/config/: teleop.yaml
src/glad_motion_control/glad_teleop/glad_teleop/: teleop_node.py
src/glad_motion_control/glad_teleop/launch/: teleop_launch.py
src/glad_motion_control/glad_trajectory_controller/: package.xml  setup.cfg  setup.py
src/glad_motion_control/glad_twist_mux/: package.xml  setup.cfg  setup.py
src/glad_motion_control/glad_twist_mux/config/: twist_mux.yaml
src/glad_motion_control/glad_twist_mux/glad_twist_mux/: twist_mux_node.py
src/glad_motion_control/glad_twist_mux/launch/: twist_mux_launch.py
src/glad_motor_controller/: package.xml  setup.py
src/glad_motor_controller/glad_motor_controller/: motor_controller_node.py  motor_driver.py
src/glad_motor_controller/launch/: motor_controller.launch.py
src/glad_navigation/: README.md  package.xml  setup.cfg  setup.py
src/glad_navigation/config/: glad_nav2_params.yaml
src/glad_navigation/glad_navigation/: glad_navigation_node.py
src/glad_navigation/launch/: glad_nav2_launch.py
src/glad_sensor_filter/: README.md  package.xml  setup.cfg  setup.py
src/glad_sensor_filter/config/: glad_ekf_params.yaml
src/glad_sensor_filter/glad_sensor_filter/: glad_ekf_node.py
src/glad_sensor_filter/launch/: glad_ekf_launch.py
src/glad_static_tf/: README.md  package.xml  setup.cfg  setup.py
src/glad_static_tf/glad_static_tf/: static_tf_broadcaster.py
src/glad_static_tf/launch/: glad_static_tf_launch.py
src/glad_tour/: README.md  package.xml  setup.cfg  setup.py
src/glad_tour/glad_tour/: glad_tour.py
src/glad_tour/launch/: glad_tour_launch.py
src/glad_voice/: README.md  package.xml  setup.cfg  setup.py
src/glad_voice/glad_voice/: voice_assistant.py
src/myimu/: setup.cfg  setup.py
src/myimu/launch/: fullimu.launch.py
src/myimu/myimu/: imuodom.py  imupublisher.py
src/rf2o_laser_odometry/launch/: lidar_odom.launch.py
src/rf2o_laser_odometry/src/: CLaserOdometry2DNode.cpp
src/start_glad/: README.md
src/start_glad/glad_bringup/: CMakeLists.txt  package.xml
src/start_glad/glad_bringup/launch/: glad_bringup_launch.py
src/start_glad/glad_final_tour/: CMakeLists.txt  package.xml
src/x_old_bringup/: sensorbringup.launch.py
(+71 files in other folders)
