<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glad_tour</name>
  <version>0.0.0</version>
  <description>G.L.A.D. Autonomous Tour Guide Package</description>
  <maintainer email="jithin27j@gmail.com">root</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>nav2_simple_commander</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
